# scribe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE.md  README.md
.github/workflows/: release.yml
.opencode/agents/: development.md
docs/superpowers/plans/: 2026-04-02-sync.md
docs/superpowers/specs/: 2026-04-02-sync-design.md
plans/: DATA_MODEL.md  PLAN.md
src/: config.rs  lib.rs  main.rs  notify.rs
src/cli/: agent.rs  capture.rs  complete.rs  daemon.rs  inbox.rs  mod.rs  parse.rs  project.rs  prompt.rs  prompt_queries.rs  reminder.rs  reminder_handlers.rs  report.rs  report_handlers.rs  service.rs  setup.rs  sync.rs  task.rs  task_handlers.rs  todo.rs  todo_handlers.rs  track.rs  track_handlers.rs
src/cli/complete/: fish.rs  mod.rs  scribe.fish  scribe.zsh  zsh.rs
src/db/: migrations.rs  mod.rs
src/domain/: capture.rs  mod.rs  project.rs  reminder.rs  slug.rs  task.rs  time_entry.rs  todo.rs
src/mcp/: mod.rs  server.rs
src/ops/: inbox.rs  mod.rs  projects.rs  reminders.rs  reporting.rs  tasks.rs  todos.rs  tracker.rs
src/server/: auth.rs  handlers.rs  mod.rs
src/store/: capture_store.rs  mod.rs  project_store.rs  project_store_tests.rs  reminder_store.rs  task_store.rs  time_entry_store.rs  todo_store.rs
src/sync/: engine.rs  keychain.rs  mod.rs  snapshot.rs
src/sync/providers/: dropbox.rs  file.rs  gist.rs  icloud.rs  jsonbin.rs  mod.rs  rest.rs  s3.rs
src/testing/: config.rs  db.rs  keychain.rs  mod.rs
src/tui/: app.rs  keys.rs  mod.rs  types.rs  ui.rs
src/tui/app/: refresh.rs
src/tui/components/: dialog.rs  form.rs  mod.rs  status_bar.rs  table.rs
src/tui/components/form/: render.rs  tests.rs
src/tui/keys/: actions.rs  forms.rs  helpers.rs  mod.rs  modal.rs  view_handlers.rs
src/tui/views/: dashboard.rs  inbox.rs  mod.rs  placeholder.rs  projects.rs  reminders.rs  tasks.rs  todos.rs  tracker.rs
tests/: app_tests.rs  capture_store_tests.rs  cli.rs  cli_integration.rs  cli_parse_tests.rs  config_tests.rs  db_tests.rs  dialog_tests.rs  form_tests.rs  inbox_ops_tests.rs  mcp_tests.rs  notify_tests.rs  project_ops_tests.rs  project_store_tests.rs  reminder_ops_tests.rs  reminder_store_tests.rs  report_handlers_tests.rs  reporting_tests.rs  slug_tests.rs  sync_engine_tests.rs  sync_integration.rs  sync_server_tests.rs  task_ops_tests.rs  task_store_tests.rs  time_entry_store_tests.rs  todo_ops_tests.rs  todo_store_tests.rs  tracker_ops_tests.rs  tui_integration.rs
tests/sync/: dropbox_tests.rs  engine_tests.rs  jsonbin_tests.rs  mod.rs  provider_tests.rs  s3_tests.rs
tests/tui/: dashboard_tests.rs  form_submission_tests.rs  keyboard_tests.rs  mod.rs  navigation_tests.rs
