[package]
name = "scribe"
version = "0.1.0"
edition = "2024"
description = "A personal productivity CLI/TUI tool for offline project and task management"
license = "MIT"
repository = "https://github.com/placeholder/scribe"
readme = "README.md"
keywords = ["cli", "productivity", "tasks", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow        = "1"
chrono        = { version = "0.4", features = ["serde"] }
clap          = { version = "4", features = ["derive"] }
clap_complete = "4"
directories   = "6"
mimalloc      = "0.1"
rusqlite      = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "2"
toml          = "0.8"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rstest     = "0.23"
tempfile   = "3"

[lints.rust]
ambiguous_negative_literals       = "warn"
missing_debug_implementations     = "warn"
redundant_imports                 = "warn"
redundant_lifetimes               = "warn"
trivial_numeric_casts             = "warn"
unsafe_op_in_unsafe_fn            = "warn"
unused_lifetimes                  = "warn"

[lints.clippy]
cargo                             = { level = "warn", priority = -1 }
complexity                        = { level = "warn", priority = -1 }
correctness                       = { level = "warn", priority = -1 }
pedantic                          = { level = "warn", priority = -1 }
perf                              = { level = "warn", priority = -1 }
style                             = { level = "warn", priority = -1 }
suspicious                        = { level = "warn", priority = -1 }
allow_attributes_without_reason   = "warn"
as_pointer_underscore             = "warn"
assertions_on_result_states       = "warn"
clone_on_ref_ptr                  = "warn"
deref_by_slicing                  = "warn"
disallowed_script_idents          = "warn"
empty_drop                        = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets       = "warn"
fn_to_numeric_cast_any            = "warn"
if_then_some_else_none            = "warn"
map_err_ignore                    = "warn"
redundant_type_annotations        = "warn"
renamed_function_params           = "warn"
semicolon_outside_block           = "warn"
implicit_clone                    = "warn"
undocumented_unsafe_blocks        = "warn"
unnecessary_safety_comment        = "warn"
unnecessary_safety_doc            = "warn"
unneeded_field_pattern            = "warn"
unused_result_ok                  = "warn"
literal_string_with_formatting_args = "allow"
