[package]
name = "scribe"
version = "1.0.0"
edition = "2024"
description = "A personal productivity CLI/TUI tool for offline project and task management"
license = "MIT"
repository = "https://github.com/placeholder/scribe"
readme = "README.md"
keywords = ["cli", "productivity", "tasks", "tui"]
categories = ["command-line-utilities"]

[features]
# The `mcp` feature gates the MCP stdio server and its async runtime.
# Build with: cargo build --features mcp
# Install with: cargo install --path . --features mcp
default = []
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars"]
# The `sync` feature gates the cloud-sync subsystem (HTTP client, auth, server).
# Build with: cargo build --features sync
# Install with: cargo install --path . --features sync
sync = [
    "dep:async-trait",
    "dep:axum",
    "dep:getrandom",
    "dep:hex",
    "dep:keyring",
    "dep:reqwest",
    "dep:rpassword",
    "dep:sha2",
    "dep:tokio",
    "dep:uuid",
]

[dependencies]
anyhow             = "1"
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4", features = ["derive"] }
clap_complete      = "4"
crossterm          = { version = "0.28", features = ["event-stream"] }
directories        = "6"
mimalloc           = "0.1"
ratatui            = "0.29"
rusqlite           = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
rustyline          = { version = "14", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "2"
toml               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Optional deps — only compiled when the `mcp` feature is enabled.
rmcp     = { version = "1.3", features = ["server", "macros", "transport-io", "schemars"], optional = true }
# rt/rt-multi-thread/macros used by mcp; net used by axum (sync feature)
tokio    = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"], optional = true }
schemars = { version = "1.0", optional = true }
# Optional deps — only compiled when the `sync` feature is enabled.
async-trait = { version = "0.1",  optional = true }
axum        = { version = "0.8",  optional = true }
getrandom   = { version = "0.3",  optional = true }
hex         = { version = "0.4",  optional = true }
keyring     = { version = "3",    optional = true }
reqwest     = { version = "0.12", features = ["json"], optional = true }
rpassword   = { version = "7",    optional = true }
sha2        = { version = "0.10", optional = true }
uuid        = { version = "1",    features = ["v4", "serde"], optional = true }

# notify-rust is used on Linux and Windows only.
# On macOS we shell out to osascript — mac-notification-sys (notify-rust's
# macOS backend) relies on the deprecated NSUserNotificationCenter API which
# does not function on macOS 26+.
[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rstest     = "0.23"
tempfile   = "3"

[lints.rust]
ambiguous_negative_literals       = "warn"
missing_debug_implementations     = "warn"
redundant_imports                 = "warn"
redundant_lifetimes               = "warn"
trivial_numeric_casts             = "warn"
unsafe_op_in_unsafe_fn            = "warn"
unused_lifetimes                  = "warn"

[lints.clippy]
cargo                             = { level = "warn", priority = -1 }
complexity                        = { level = "warn", priority = -1 }
correctness                       = { level = "warn", priority = -1 }
pedantic                          = { level = "warn", priority = -1 }
perf                              = { level = "warn", priority = -1 }
style                             = { level = "warn", priority = -1 }
suspicious                        = { level = "warn", priority = -1 }
allow_attributes_without_reason   = "warn"
as_pointer_underscore             = "warn"
assertions_on_result_states       = "warn"
clone_on_ref_ptr                  = "warn"
deref_by_slicing                  = "warn"
disallowed_script_idents          = "warn"
empty_drop                        = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets       = "warn"
fn_to_numeric_cast_any            = "warn"
if_then_some_else_none            = "warn"
map_err_ignore                    = "warn"
redundant_type_annotations        = "warn"
renamed_function_params           = "warn"
semicolon_outside_block           = "warn"
implicit_clone                    = "warn"
undocumented_unsafe_blocks        = "warn"
unnecessary_safety_comment        = "warn"
unnecessary_safety_doc            = "warn"
unneeded_field_pattern            = "warn"
unused_result_ok                  = "warn"
literal_string_with_formatting_args = "allow"
# multiple_crate_versions is allowed because ratatui/crossterm/rusqlite bring
# incompatible transitive versions of hashbrown, unicode-width, and windows-sys
# that are outside our control (M-LINT-OVERRIDE-EXPECT is for code; Cargo.toml
# uses allow for workspace-level lint suppressions).
multiple_crate_versions             = "allow"
